FIxed the alignments of the title

--- a/week01/index.css
+++ b/week01/index.css
@@ -1,11 +1,11 @@
 body{
     font-family: monospace;
     color:orangered;
-    text-align: center;
 }
 html{
     background-color: indigo;
 }
-h1{
-
+#title, 
+#Author{
+    text-align: center;
 }
